--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="body">
     <div class="banner">
       <h1 class="topic">Raccoon</h1>
-      <p><strong>!!! MISSING !!!</strong></p>
+      <p><strong>!!!! MISSING !!!!</strong></p>
       <p>Have you seen me? If yes, please call (555)-555-5555</p>
     </div>
     <div class="box">
