--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="body">
     <div class="banner">
-      <h1 class="topic">Raccoon</h1>
+      <h1 class="topic">Opossum</h1>
       <p><strong>!!!! MISSING !!!!</strong></p>
       <p>Have you seen me? If yes, please call (555)-555-5555</p>
     </div>
