--- a/index.html
+++ b/index.html
@@ -4,16 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <title>Flyer</title>
   </head>
-  <body class="body">
-    <div class="banner">
-      <h1 class="topic">Opossum</h1>
-      <p><strong>!!!! MISSING !!!!</strong></p>
-      <p>Have you seen me? If yes, please call (555)-555-5555</p>
+  <body class="container">
+    <div class="row">
+      <img src="./img/Chinese calligraphy.jpg" alt="Chinese calligraphy" />
     </div>
-    <div class="box">
-      <img class="box-photo" src="./img/photo_2023-10-29_19-16-28.jpg" alt="photo-1" />
+    <div class="row m-1">
+      <h2 class="text-center mt-2">How to find us</h2>
+      <div class="card mx-auto p-2" style="width: 48rem">
+        <div class="card-body">
+          <p class="card-text fw-bold">1. Find room 105.</p>
+        </div>
+        <img src="./img/photo_2023-10-29_19-16-28.jpg" class="card-img-top" alt="..." />
+      </div>
+      <div class="card mx-auto p-2" style="width: 48rem">
+        <div class="card-body">
+          <p class="card-text fw-bold">1. Find room 105.</p>
+        </div>
+        <img src="./img/photo_2023-10-29_19-16-28.jpg" class="card-img-top" alt="..." />
+      </div>
+      <div class="card mx-auto p-2" style="width: 48rem">
+        <div class="card-body">
+          <p class="card-text fw-bold">1. Find room 105.</p>
+        </div>
+        <img src="./img/photo_2023-10-29_19-16-28.jpg" class="card-img-top" alt="..." />
+      </div>
+      <ul>
+        <li>
+          <p>
+            To the left there are downstairs. Go downstairs. Then turn right. Pass the restrooms.
+            There are small stairs at the end of the hallway. Go down and turn right. Walk straight.
+            There is a translation center area with tables to the left, you don’t need to come
+            inside. Right before the entrance there is a door to the right, this is the room you’re
+            looking for. Hurray, you’ve found us! Welcome in!
+          </p>
+        </li>
+      </ul>
+      <p class="fs-2 text-center">Hurray, you’ve found us! Welcome in!&#129395;</p>
     </div>
   </body>
 </html>
