--- a/index.html
+++ b/index.html
@@ -18,35 +18,70 @@
     </div>
     <div class="row m-1">
       <h2 class="text-center mt-2">How to find us</h2>
-      <div class="card mx-auto p-2" style="width: 48rem">
+      <div class="card mx-auto p-2 mb-2" style="width: 48rem">
         <div class="card-body">
-          <p class="card-text fw-bold">1. Find room 105.</p>
-        </div>
-        <img src="./img/photo_2023-10-29_19-16-28.jpg" class="card-img-top" alt="..." />
-      </div>
-      <div class="card mx-auto p-2" style="width: 48rem">
-        <div class="card-body">
-          <p class="card-text fw-bold">1. Find room 105.</p>
-        </div>
-        <img src="./img/photo_2023-10-29_19-16-28.jpg" class="card-img-top" alt="..." />
-      </div>
-      <div class="card mx-auto p-2" style="width: 48rem">
-        <div class="card-body">
-          <p class="card-text fw-bold">1. Find room 105.</p>
-        </div>
-        <img src="./img/photo_2023-10-29_19-16-28.jpg" class="card-img-top" alt="..." />
-      </div>
-      <ul>
-        <li>
-          <p>
-            To the left there are downstairs. Go downstairs. Then turn right. Pass the restrooms.
-            There are small stairs at the end of the hallway. Go down and turn right. Walk straight.
-            There is a translation center area with tables to the left, you don’t need to come
-            inside. Right before the entrance there is a door to the right, this is the room you’re
-            looking for. Hurray, you’ve found us! Welcome in!
+          <p class="card-text fw-bold">
+            1. Find room 114 on the first floor of Herter Hall. To the left there are downstairs.
           </p>
-        </li>
-      </ul>
+        </div>
+        <img
+          src="./img/1.jpg"
+          class="card-img-top"
+          alt="Find room 114 on the first floor of Herter Hall. To the left there are downstairs."
+        />
+      </div>
+      <div class="card mx-auto p-2 mb-2" style="width: 48rem">
+        <div class="card-body">
+          <p class="card-text fw-bold">2. Go downstairs. Then turn right.</p>
+        </div>
+        <img src="./img/2.jpg" class="card-img-top" alt="Go downstairs. Then turn right." />
+      </div>
+      <div class="card mx-auto p-2 mb-2" style="width: 48rem">
+        <div class="card-body">
+          <p class="card-text fw-bold">
+            3. Pass the restrooms. There are small stairs at the end of the hallway.
+          </p>
+        </div>
+        <img
+          src="./img/3.jpg"
+          class="card-img-top"
+          alt="Pass the restrooms. There are small stairs at the end of the hallway."
+        />
+      </div>
+      <div class="card mx-auto p-2 mb-2" style="width: 48rem">
+        <div class="card-body">
+          <p class="card-text fw-bold">4. Go down and turn right.</p>
+        </div>
+        <img src="./img/4.jpg" class="card-img-top" alt=" Go down and turn right." />
+      </div>
+      <div class="card mx-auto p-2 mb-2" style="width: 48rem">
+        <div class="card-body">
+          <p class="card-text fw-bold">
+            5. Walk straight. There is a translation center area with tables to the left, come
+            inside.
+          </p>
+        </div>
+        <img
+          src="./img/5.jpg"
+          class="card-img-top"
+          alt="Walk straight. There is a translation center area with tables to the left, come
+        inside."
+        />
+      </div>
+      <div class="card mx-auto p-2 mb-2" style="width: 48rem">
+        <div class="card-body">
+          <p class="card-text fw-bold">
+            6. Right before the second entrance there is a door to the right, this is the room
+            you’re looking for.
+          </p>
+        </div>
+        <img
+          src="./img/6.jpg"
+          class="card-img-top"
+          alt="Right before the second entrance there is a door to the right, this is the room
+        you’re looking for."
+        />
+      </div>
       <p class="fs-2 text-center">Hurray, you’ve found us! Welcome in!&#129395;</p>
     </div>
   </body>
