--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Flyer</title>
   </head>
-  <body class="container">
+  <body class="container bg-green">
     <div class="row">
       <img src="./img/Chinese calligraphy.jpg" alt="Chinese calligraphy" />
     </div>
