--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   </head>
   <body class="container bg-green">
     <div class="row">
-      <img src="./img/Chinese calligraphy.jpg" alt="Chinese calligraphy" />
+      <img
+        src="./img/Chinese calligraphy.jpg"
+        alt="Chinese calligraphy"
+        class="img-fluid border p-0"
+      />
     </div>
     <div class="row m-1">
       <h2 class="text-center mt-2">How to find us</h2>
